--- a/templates/search.html
+++ b/templates/search.html
@@ -32,7 +32,7 @@
                 {% for play in playlists %}
                 <div class='col-md-12'>
                     <div class='row'>
-                        <p><a href="/analyse?playlist={{ play.id }}">{{ play.name }}</a></p>
+                        <p><a href="/score?playlist={{ play.id }}">{{ play.name }}</a></p>
                     </div>
                 </div>
                 {% endfor %}
@@ -41,7 +41,7 @@
     </div>
 </div>
 
-<div class="section" ng-app="searchPlaylists" ng-controller="playlistCtrl">
+<div class="section" ng-app="search" ng-controller="searchCtrl">
 <form id="new-playlist" method="POST">
 
     <div class="container">
@@ -61,7 +61,7 @@
         <div class="row">
             <div class="col-md-4 ml-auto mr-auto text-center">
                 <div class="checkbox">
-                    <input id="store" ng-model="store" type="checkbox">
+                    <input id="store" ng-model="store" type="checkbox" ng-true-value="yes" ng-false-value="no">
                     <label for="store">Do not show results on board</label>
                 </div>
             </div>
