--- a/templates/search.html
+++ b/templates/search.html
@@ -59,14 +59,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4 ml-auto mr-auto text-center">
-                <div class="checkbox">
-                    <input id="store" ng-model="store" type="checkbox" ng-true-value="yes" ng-false-value="no">
-                    <label for="store">Do not show results on board</label>
-                </div>
-            </div>
-            <div class="col-md-2 ml-auto mr-auto text-center">
-                <button class="btn btn-primary" type="submit">Submit</button>
+            <div class="col-md-10">
+                <button class="btn btn-primary" style="float:right;" type="submit">Submit</button>
             </div>
         </div>
     </div>
