--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,6 +10,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet" />
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet" />
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet" />
+    {% block head %}
+    {% endblock %}
 </head>
 
 <body class="landing-page sidebar-collapse">
@@ -98,8 +100,8 @@
 </body>
 
 <!--   Core JS Files   -->
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 <script src="{{ url_for('static', filename='js/core/jquery.3.2.1.min.js') }}" type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 <script src="{{ url_for('static', filename='js/core/popper.min.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('static', filename='js/core/bootstrap.min.js') }}" type="text/javascript"></script>
 <!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
