--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5786,6 +5786,8 @@ Created using IcoMoon - icomoon.io
     right: 12%;
 }
 
+.section-score { background: #EEEEEE; }
+
 [data-background-color="orange"] {
     background-color: #e95e38;
 }
