--- a/templates/score.html
+++ b/templates/score.html
@@ -56,8 +56,8 @@
                                         <p><strong>Followers:</strong> {a callback.followers.total a}</p>
                                     </div>
                                     <div class="col-md-6">
-                                        <p><strong>Highest Valence:</strong> {a callback.highest.name a} ({a callback.highest.score a})</p>
-                                        <p><strong>Lowest Valence:</strong> {a callback.lowest.name a} ({a callback.lowest.score a})</p>
+                                        <p><strong>Highest Valence:</strong> {a callback.highest.track.name a} ({a callback.highest.score a})</p>
+                                        <p><strong>Lowest Valence:</strong> {a callback.lowest.track.name a} ({a callback.lowest.score a})</p>
                                         <p><strong>Range:</strong> {a callback.highest.score - callback.lowest.score a}</p>
                                     </div>
                                     <div class="col-md-2 text-center">
