--- a/templates/search.html
+++ b/templates/search.html
@@ -54,7 +54,7 @@
             <div class="col-md-8 ml-auto mr-auto text-center">
                 <div class="form-group">
                     <label style="float:left;">Playlist ID:</label>
-                    <input type="text" ng-model="playlist" placeholder="e.g" class="form-control">
+                    <input type="text" ng-model="playlist" placeholder="e.g https://open.spotify.com/user/kasuporo/playlist/5vE5n0P1Ajz081hWLr4q3f?si=o4XPm7PBS5uS7IPZFclKNw" class="form-control">
                 </div>
             </div>
         </div>
