--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,11 +26,11 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-header">Information</a>
                     <a class="dropdown-item" href="#">Documentation</a>
-                    <a class="dropdown-item" href="#">Chnagelogs</a>
+                    <a class="dropdown-item" href="#">Changelogs</a>
                 </div>
             </div>
             <div class="navbar-translate">
-                <a class="navbar-brand" href="/" target="_blank">
+                <a class="navbar-brand" href="/">
                     Spotify Playlist Depression Score
                 </a>
                 <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
